--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "ethers": "^5.6.5",
+    "moralis": "^2.6.0",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
-    "typescript": "^4.8.2",
-    "moralis": "^2.6.0"
+    "typescript": "^4.8.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
