--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fyrefli",
+  "name": "hotrockets",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,19 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
-    "@thirdweb-dev/react": "^2.2.4",
-    "@thirdweb-dev/sdk": "^2.2.1",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "ethers": "^5.6.5",
-    "moralis": "^2.6.0",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.8.0",
+    "tw-elements": "^1.0.0-beta1",
     "typescript": "^4.8.2"
   },
   "devDependencies": {
